--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,10 +17,6 @@ const skills = ['HTML', 'CSS', 'JavaScript', 'React', 'Astro', 'Writing Docs'];
 const happy = true;
 const finished = false;
 const goal = 3;
-
-const skillColor = 'navy';
-const fontWeight = 'bold';
-const textCase = 'uppercase';
 ---
 
 <html lang='en'>
@@ -30,18 +26,6 @@ const textCase = 'uppercase';
     <meta name='viewport' content='width=device-width' />
     <meta name='generator' content={Astro.generator} />
     <title>{pageTitle}</title>
-    <style define:vars={{ skillColor, fontWeight, textCase }}>
-      h1 {
-        color: purple;
-        font-size: 4rem;
-      }
-
-      .skill {
-        color: var(--skillColor);
-        font-weight: var(--fontWeight);
-        text-transform: var(--textCase);
-      }
-    </style>
   </head>
   <body>
     <Header />
@@ -72,7 +56,7 @@ const textCase = 'uppercase';
     </ul>
 
     <p>My skills are:</p>
-    <ul>{skills.map((skill) => <li class='skill'>{skill}</li>)}</ul>
+    <ul>{skills.map((skill) => <li class='font-bold text-emerald-600'>{skill}</li>)}</ul>
 
     {happy && <p>I am happy to be learning Astro!</p>}
 
