--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -10,6 +10,7 @@ const username = 'Woollywood';
     display: flex;
     gap: 1rem;
     margin-top: 2rem;
+    margin-bottom: 2rem;
   }
 </style>
 
