--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,20 @@
 
 /* nav styles */
 
+.wrapper {
+  display: grid;
+  min-height: 100vh;
+  gap: 16px;
+  height: 100%;
+  grid-template-rows: auto 1fr auto;
+}
+
+.container {
+  margin: 0 auto;
+  padding: 0 16px;
+  max-width: 1240px;
+}
+
 .hamburger {
   display: block;
   padding-right: 20px;
