--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,12 +1,14 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import BlogPost from '../components/shared/BlogPost.astro';
 
+const posts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
 const pageTitle = 'My Astro Learning Blog';
 ---
 
 <style>
   p {
-    font-size: 4rem;
+    font-size: 2rem;
     color: teal;
   }
 </style>
@@ -14,8 +16,6 @@ const pageTitle = 'My Astro Learning Blog';
 <BaseLayout pageTitle={pageTitle}>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
-    <li><a href='/posts/post-1/'>Post 1</a></li>
-    <li><a href='/posts/post-2/'>Post 2</a></li>
-    <li><a href='/posts/post-3/'>Post 3</a></li>
+    {posts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
   </ul>
 </BaseLayout>
