--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,7 +1,9 @@
 ---
-import BaseLayout from './BaseLayout.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
+const pageTitle = 'Tag Index';
 
-const { frontmatter } = Astro.props;
+const posts = Object.values(import.meta.glob('../posts/*.md', { eager: true }));
+const tags = [...new Set(posts.map((post: any) => post.frontmatter.tags).flat())];
 ---
 
 <style>
@@ -24,16 +26,14 @@ const { frontmatter } = Astro.props;
   }
 </style>
 
-<BaseLayout pageTitle={frontmatter.title}>
-  <p>Written by {frontmatter.author}</p>
+<BaseLayout pageTitle={pageTitle}>
   <div class='tags'>
     {
-      frontmatter.tags.map((tag: string) => (
+      tags.map((tag) => (
         <p class='tag'>
           <a href={`/tags/${tag}`}>{tag}</a>
         </p>
       ))
     }
   </div>
-  <slot />
 </BaseLayout>
